unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/tspa__NotificationsFromTechsee__c.object-meta.xml
<CustomObject>
    <label>Visual Remote Assistant - Sessions Event</label>
    <nameField>
        <displayFormat>NFT-{0000000000}</displayFormat>
        <label>NotificationsFromTechsee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant - Sessions Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>