unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__Accuracy_Level__c.field-meta.xml
<CustomField>
    <fullName>tspa__Accuracy_Level__c</fullName>
    <label>Accuracy Level</label>
    <length>254</length>
    <type>Text</type>
</CustomField>