unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__audio_event__c.field-meta.xml
<CustomField>
    <fullName>tspa__audio_event__c</fullName>
    <label>audio event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>