unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__coordinateAcc__c.field-meta.xml
<CustomField>
    <fullName>tspa__coordinateAcc__c</fullName>
    <label>coordinateAcc</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>