unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__googleMapsLink__c.field-meta.xml
<CustomField>
    <fullName>tspa__googleMapsLink__c</fullName>
    <label>googleMapsLink</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>