unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__Image_Link__c.field-meta.xml
<CustomField>
    <fullName>tspa__Image_Link__c</fullName>
    <label>Image Link</label>
    <length>254</length>
    <type>Text</type>
</CustomField>