unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__imageName__c.field-meta.xml
<CustomField>
    <fullName>tspa__imageName__c</fullName>
    <label>imageName</label>
    <length>254</length>
    <type>Text</type>
</CustomField>