unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__Link_to_Google_Map__c.field-meta.xml
<CustomField>
    <fullName>tspa__Link_to_Google_Map__c</fullName>
    <label>Link to Google Map</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>