unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__media_type__c.field-meta.xml
<CustomField>
    <fullName>tspa__media_type__c</fullName>
    <label>Media Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>