unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__mediaAccess_status__c.field-meta.xml
<CustomField>
    <fullName>tspa__mediaAccess_status__c</fullName>
    <label>Media Access Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>