unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__mirroringType__c.field-meta.xml
<CustomField>
    <fullName>tspa__mirroringType__c</fullName>
    <label>mirroringType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>