unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__observer_firstName__c.field-meta.xml
<CustomField>
    <fullName>tspa__observer_firstName__c</fullName>
    <label>observer firstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>