unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__OCR_Result_Type__c.field-meta.xml
<CustomField>
    <fullName>tspa__OCR_Result_Type__c</fullName>
    <label>OCR Result Type</label>
    <length>254</length>
    <type>Text</type>
</CustomField>