unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__OCRType__c.field-meta.xml
<CustomField>
    <fullName>tspa__OCRType__c</fullName>
    <label>OCRType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barcode</fullName>
            </value>
            <value>
                <fullName>QR Code</fullName>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>