unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>tspa__Reference_Number__c</fullName>
    <label>Reference Number</label>
    <length>254</length>
    <type>Text</type>
</CustomField>