unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__requestID__c.field-meta.xml
<CustomField>
    <fullName>tspa__requestID__c</fullName>
    <label>requestID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>