unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__resources__c.field-meta.xml
<CustomField>
    <fullName>tspa__resources__c</fullName>
    <label>resources</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>