unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__sessionEndedBy__c.field-meta.xml
<CustomField>
    <fullName>tspa__sessionEndedBy__c</fullName>
    <label>sessionEndedBy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>agent</fullName>
            </value>
            <value>
                <fullName>customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>