unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__sessionID__c.field-meta.xml
<CustomField>
    <fullName>tspa__sessionID__c</fullName>
    <label>sessionID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>