unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__TechSee_Customer_Details__c.field-meta.xml
<CustomField>
    <fullName>tspa__TechSee_Customer_Details__c</fullName>
    <label>TechSee_Customer_Details</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>