unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__timestamp__c.field-meta.xml
<CustomField>
    <fullName>tspa__timestamp__c</fullName>
    <label>timestamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>