unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__video_status__c.field-meta.xml
<CustomField>
    <fullName>tspa__video_status__c</fullName>
    <label>Video Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>