unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/fields/tspa__VJFlowName__c.field-meta.xml
<CustomField>
    <fullName>tspa__VJFlowName__c</fullName>
    <label>VJ Flow Name</label>
    <type>TextArea</type>
</CustomField>