unpackaged/main/default/objects/tspa__NotificationsFromTechsee__c/listViews/tspa__All.listView-meta.xml
<ListView>
    <fullName>tspa__All</fullName>
    <columns>NAME</columns>
    <columns>tspa__sessionID__c</columns>
    <columns>tspa__Type__c</columns>
    <columns>tspa__TechSee_SMS_Status__c</columns>
    <columns>tspa__timestamp__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>